--- a/Physics Framework/DX11 Framework.vcxproj.filters
+++ b/Physics Framework/DX11 Framework.vcxproj.filters
@@ -23,6 +23,8 @@
     <ClInclude Include="Debug.h" />
     <ClInclude Include="Vector3D.h" />
     <ClInclude Include="Consts.h" />
+    <ClInclude Include="Transform.h" />
+    <ClInclude Include="Appearance.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
@@ -33,6 +35,8 @@
     <ClCompile Include="OBJLoader.cpp" />
     <ClCompile Include="Debug.cpp" />
     <ClCompile Include="Vector3D.cpp" />
+    <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="Appearance.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
