--- a/Physics Framework/DX11 Framework.vcxproj.filters
+++ b/Physics Framework/DX11 Framework.vcxproj.filters
@@ -26,6 +26,7 @@
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Appearance.h" />
     <ClInclude Include="ParticleModel.h" />
+    <ClInclude Include="Quaternion.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
