--- a/Physics Framework/DX11 Framework.vcxproj.filters
+++ b/Physics Framework/DX11 Framework.vcxproj.filters
@@ -27,6 +27,7 @@
     <ClInclude Include="Appearance.h" />
     <ClInclude Include="ParticleModel.h" />
     <ClInclude Include="Quaternion.h" />
+    <ClInclude Include="ParticleSystem.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
@@ -40,6 +41,7 @@
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Appearance.cpp" />
     <ClCompile Include="ParticleModel.cpp" />
+    <ClCompile Include="ParticleSystem.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
